--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.2.1",
     "@urql/vue": "^1.1.2",
+    "@vue/shared": "^3.4.21",
     "@vueuse/head": "^2.0.0",
     "firebase": "^10.6.0",
     "graphql": "^16.8.1",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "critters": "^0.0.16",
+    "critters": "^0.0.20",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
