--- a/src/config/siteconfig.json
+++ b/src/config/siteconfig.json
@@ -1,5 +1,5 @@
 {
-  "siteName": "Software Enginner",
-  "siteUrl": "https://jefersonsilva.me",
-  "description": "I am Software Engineer that crafts things for the Web, heavy focused on front-end development enthusiastic and fascinated on UI design"
+  "siteName": "Postdoc Research Fellow",
+  "siteUrl": "https://SrikantaChowdhury.github.io/portfolio_for_Srika/",
+  "description": "I'm Srika. I'm a postdoctoral research fellow in Alex Nectow's lab at Columbia University, specializing in <em>behavioral, circuit, and molecular neuroscience"
 }
